tests/baselines/reference/trailingCommaInHeterogenousArrayLiteral1.errors.txt
tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts(5,19): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
  Type '文字 | 数字' is not assignable to type '数字'.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts(6,19): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.


==== tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts (2 errors) ====
    class arrTest {
        test(arg1: number[]) {    }
        callTest() {
            // these two should give the same error
            this.test([1, 2, "hi", 5, ]);
                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
!!! error TS2345:   Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
            this.test([1, 2, "hi", 5]); 
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
        }
    }
    